# seedintake

./: .env.example  .gitignore  3_karpathy-idea.md  AGENTS.md  README.md  deploy.sh  log.md
services/seed_pipeline/: AGENTS.md  README.md  clear_today_sheet.py  pyproject.toml  requirements.txt
services/seed_pipeline/src/seed_pipeline/: __init__.py  cli.py
services/seed_pipeline/src/seed_pipeline/intake/: __init__.py  dry_run.py  github_storage.py  markdown_writer.py  mock_orchestrator.py
services/seed_pipeline/src/seed_pipeline/integrations/: __init__.py  google_workspace_live.py  google_workspace_mock.py
services/seed_pipeline/src/seed_pipeline/link_worker/: __init__.py  cli.py  jina.py  processors.py  (+5 more)
services/seed_pipeline/tests/: test_cli.py  test_dry_run.py  test_github_storage.py  test_google_workspace_live.py  test_google_workspace_mock.py  test_link_worker.py  test_markdown_writer.py  test_mock_orchestrator.py
services/seed_pipeline/tests/link_worker/: test_processors.py
services/telegram_intake_bot/: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
services/telegram_intake_bot/src/telegram_intake_bot/: __init__.py  cli.py  config.py  errors.py  link_queue_writer.py  router.py  runtime.py  session_store.py  task_intake_writer.py  transcription.py  types.py  webhook.py
services/telegram_intake_bot/tests/: test_link_queue_writer.py  test_router.py  test_runtime.py  test_seed_flow.py  test_task_flow.py  test_task_writer.py  test_transcription.py  test_webhook.py
services/telegram_intake_bot/tests/fixtures/: mock_updates_task_intake_e2e.json
(+654 files in other folders)
