[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seed-pipeline"
version = "0.2.0"
description = "Seed Pipeline - intake and processing for SeedIntake"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
seed-link-worker = "seed_pipeline.link_worker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
